--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: windCrain
-subtitle: ''
-description: 'windCrain'
+subtitle: ""
+description: "windCrain"
 keywords:
 author: 麦子落
 language: zh-CN
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://windcrain.top/
+url: https://blog.lovemzl.eu.org/
 # permalink: :year/:month/:day/:title/
 permalink: post/:title/
 permalink_defaults:
@@ -38,7 +38,7 @@ titlecase: false # Transform title into titlecase
 external_link:
   enable: true # Open external links in new tab
   field: site # Apply to the whole site
-  exclude: ''
+  exclude: ""
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -48,21 +48,21 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace: ''
+  tab_replace: ""
   wrap: true
   hljs: false
 prismjs:
   enable: false
   preprocess: true
   line_number: true
-  tab_replace: ''
+  tab_replace: ""
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: ""
   per_page: 10
   order_by: -date
 
@@ -82,7 +82,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
-updated_option: 'mtime'
+updated_option: "mtime"
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -98,7 +98,8 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: butterfly
+theme:
+  butterfly
 
   # Deployment
   ## Docs: https://hexo.io/docs/one-command-deployment
@@ -113,19 +114,16 @@ deploy:
   branch: master
   # message: [message]
 
-
-
 # kramed:
- # gfm: true
- # pedantic: false
- # sanitize: false
- # tables: true
- # breaks: true
- # smartLists: true
- # smartypants: true
+# gfm: true
+# pedantic: false
+# sanitize: false
+# tables: true
+# breaks: true
+# smartLists: true
+# smartypants: true
 
 search:
   path: search.xml
   field: all
   content: true
-
